--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@ background-size:cover;
   color:white;
   background:rgba(255,255,0,0.4);
  }
+ body{
+     background-color: aqua;
+ }
+
  .hue:hover{
   color:yellow;
   background:transparent;
